@@ -1,3 +1,8 @@
+2007-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/po.rb: (Gluon::PresentationObject class) NOT operator
+	notation for cond.
+
 2007-09-06  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/rs.rb: (Gluon::RequestResponseContext class) switch to
